ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/Popup_notification__c.object-meta.xml
<CustomObject>
    <label>Popup notification</label>
    <nameField>
        <displayFormat>pop-{000000}</displayFormat>
        <label>Popup notification Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Popup notifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>