ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/Current__c.field-meta.xml
<CustomField>
    <fullName>Current__c</fullName>
    <formula>AND( Active__c , Start_Date__c &lt;=  TODAY(),  End_Date__c &gt;=  TODAY() )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current</label>
    <type>Checkbox</type>
</CustomField>