ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/English_message__c.field-meta.xml
<CustomField>
    <fullName>English_message__c</fullName>
    <label>English message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>