ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/English_Message_Rich__c.field-meta.xml
<CustomField>
    <fullName>English_Message_Rich__c</fullName>
    <label>English</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>