ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/French_message__c.field-meta.xml
<CustomField>
    <fullName>French_message__c</fullName>
    <label>French message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>