ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/French_Message_Rich__c.field-meta.xml
<CustomField>
    <fullName>French_Message_Rich__c</fullName>
    <label>French</label>
    <length>10000</length>
    <type>Html</type>
</CustomField>