ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/Number_of_time_to_display__c.field-meta.xml
<CustomField>
    <fullName>Number_of_time_to_display__c</fullName>
    <defaultValue>3</defaultValue>
    <label>Display Frequency</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>