ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/fields/Spanish_message__c.field-meta.xml
<CustomField>
    <fullName>Spanish_message__c</fullName>
    <label>Spanish message</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>