ClaimsAndWarranty_ClaimsDev/WarrantyAndClaims_ClaimsDev/force-app/main/default/objects/Popup_notification__c/listViews/All_Pop_Ups.listView-meta.xml
<ListView>
    <fullName>All_Pop_Ups</fullName>
    <columns>Active__c</columns>
    <columns>NAME</columns>
    <columns>Current__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <columns>Tag__c</columns>
    <columns>Number_of_time_to_display__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Pop-Ups</label>
</ListView>